<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/menu_group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_feed"
            android:icon="@drawable/ic_filter_list_black"
            android:title="@string/filter" />
    </group>

    <group
        android:id="@+id/menu_group_2"
        android:checkableBehavior="none">
        <item
            android:id="@+id/menu_messages"
            android:icon="@drawable/ic_message_black"
            android:title="Messages" />
    </group>

    <group android:id="@+id/menu_group_3">
        <item
            android:id="@+id/share_with_friend"
            android:title="@string/share_with_friends" /> 
        <item
            android:id="@+id/rate_and_update"
            android:title="@string/rate_and_update" />


        <item
            android:id="@+id/menu_settings"
            android:title="Settings" />
        <item
            android:id="@+id/contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/menu_log_out"
            android:title="@string/log_out" />
    </group>
</menu>